# django-jndev

./: .envtemp  .gitignore  README.md  db.sqlite3  package-lock.json  package.json  postcss.config.js  pyproject.toml
jndev/: apps.py
jndev/static_src/: package-lock.json  package.json
project/: models.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_post_cover.py  0003_auto_20210601_2303.py
project_files/: settings.py  urls.py
static/css/: input.css  main.css  style.css  styles.css
static/sass/: main.scss  style.scss
templates/: base.html  index.html
templates/layouts/: about.html  home.html  post_detail.html
templates/partials/: body.html  footer.html  nav.html
