[tool.poetry]
name = "django-jndev"
version = "0.1.0"
description = ""
authors = ["jnutterdev <hello@jnutterdev.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
django-sass = "^1.1.0"
python-dotenv = "^0.17.1"
psycopg2-binary = "^2.8.6"
Markdown = "^3.3.4"
django-webp = "^2.0.0"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
